Fix image overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,6 +17,10 @@
   }
 }
 
+img {
+  max-width: 100%;
+}
+
 body {
 
   background-color: #004257;
